gph/gph-frontend-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gph-frontend-prod-deploy
spec:
  selector:
    matchLabels:
      app: gph-frontend-prod-deploy
  template:
    metadata:
      labels:
        app: gph-frontend-prod-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3404"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: gph-frontend-prod-deploy
          image: ldamasio/gph-frontend:latest
          ports:
          - containerPort: 3404
