gph/gph-frontend-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gph-frontend-svc
spec:
  selector:
    app: gph-frontend-deploy
  ports:
    - port: 80
      targetPort: 3404
  type: LoadBalancer
